--- a/app/src/main/res/layout/activity_internet_not_connected.xml
+++ b/app/src/main/res/layout/activity_internet_not_connected.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#FFFFFF"
+    android:background="@android:color/white"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,8 +10,7 @@
         android:src="@drawable/not_connected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
-        android:layout_gravity="center"  />
+        android:layout_gravity="center" />
 
     <TextView
         android:text="اتصال با اینترنت برقرار نمی باشد"
@@ -20,7 +19,7 @@
         android:textColor="@color/alert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginBottom="21dp"
         android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
