--- a/app/src/main/res/layout/app_bar_coordinate_channels.xml
+++ b/app/src/main/res/layout/app_bar_coordinate_channels.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ansaralhojat.ansaralhojat.Main2AppCompatActivity">
+    tools:context="com.ansaralhojat.ansaralhojat.MainAppCompatActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
