--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -6,5 +6,6 @@
     <item name="ic_menu_interact_us" type="drawable">@android:drawable/ic_menu_report_image</item>
     <item name="ic_menu_send" type="drawable">@android:drawable/ic_menu_call</item>
 
-    <item name="ic_menu_details" type="drawable">@android:drawable/ic_menu_info_details</item>
+    <item name="ic_media_play" type="drawable">@android:drawable/ic_media_play</item>
+    <item name="ic_media_pause" type="drawable">@android:drawable/ic_media_pause</item>
 </resources>
