--- a/app/src/main/res/layout/activity_meetings.xml
+++ b/app/src/main/res/layout/activity_meetings.xml
@@ -2,19 +2,18 @@
     android:id="@+id/sample_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
         android:background="@android:color/darker_gray" />
 
     <FrameLayout
-        android:id="@+id/lectures_content_fragment"
-        android:layout_width="0px"
-        android:layout_height="match_parent"
+        android:id="@+id/meetings_content_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
         android:layout_weight="2" />
 
 </LinearLayout>
-
 
