--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,15 +3,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_main"
-            android:icon="@drawable/ic_menu_main"
+            android:icon="@mipmap/left_arrow"
             android:title="صفحه اصلی" />
         <item
             android:id="@+id/nav_lecture"
-            android:icon="@drawable/ic_menu_lecture"
+            android:icon="@mipmap/left_arrow"
             android:title="سخنرانی" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@mipmap/left_arrow"
             android:title="گالری تصاویر" />
     </group>
 
@@ -19,11 +19,11 @@
         <menu>
             <item
                 android:id="@+id/nav_about_us"
-                android:icon="@drawable/ic_menu_interact_us"
+                android:icon="@mipmap/left_arrow"
                 android:title="درباره ما" />
             <item
                 android:id="@+id/nav_coordinate_channels"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@mipmap/left_arrow"
                 android:title="کانال های ارتباطی" />
         </menu>
     </item>
