progress bar meeting

--- a/app/src/main/res/layout/recycler_view_frag.xml
+++ b/app/src/main/res/layout/recycler_view_frag.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <ProgressBar
+        android:id="@+id/pb_lectures"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_margin="135dp"
+        android:visibility="visible" />
     <RadioGroup
+        android:id="@+id/rg_lectures"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
